# Cpp-stream

./: CMakeLists.txt  README.md
include/: cpp_stream.h
src/: stream.h  stream_utils.h
tests/: stream_tests.cpp
